# catapult

./: Cargo.toml
src/: config.rs  filters.rs  main.rs  processor.rs
src/inputs/: network.rs  random.rs  stdin.rs
src/outputs/: elasticsearch.rs  file.rs  network.rs  stdout.rs
