[package]
authors = ["Pierre Baillet <pierre@baillet.name>"]
description = "Catapult sends you logs elsewhere"
documentation = "http://people.zoy.org/~oct/public/doc/catapult/inputs/index.html"
homepage = "https://github.com/octplane/catapult"
keywords = ["network", "logs", "shipping", "logstash"]
name = "catapult"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/octplane/catapult"
version = "0.1.2"

[dependencies]
chrono = "0.4.0"
docopt = "0.8.3"
hyper = "0.11.14"
futures = "0.1"
tokio-core = "0.1"
log = "0.4.1"
nom = "3.2"
rand = "0.4.2"
serde = "1.0.27"
serde_json = "1.0.9"
time = "0.1.39"
url = "1.6.0"
